--- a/docs/partials/releases/5.0.0final/release_notes.html
+++ b/docs/partials/releases/5.0.0final/release_notes.html
@@ -12,7 +12,7 @@
         <li>Changed how custom Checkstyle extensions are to be integrated with eclipse-cs. Read <a href="#!/extensions"
                 >here</a> and <a href="#!/custom-checks">here</a>. Existing extension fragments for 4.4.x plugin version
             need to be adapted.</li>
-        <li>Dropped german and french translations until a clean and workable solution for providing language packs is
+        <li>Dropped German and French translations until a clean and workable solution for providing language packs is
             worked out</li>
     </ul>
     <h3>Bugfixes</h3>
