--- a/net.sf.eclipsecs.doc/src/main/resources/partials/index.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/index.html
@@ -202,8 +202,8 @@
                         <i class="fa fa-external-link">
                         </i>
                     </a>
-                    project, where Roman Ivanov and his
-                    team from the Sevastopol National Technical University, Crimea
+                    project, where Roman Ivanov and
+                    contributors from all around the world
                     are assembling a heap of additional
                     Checkstyle checks.
                     <br />
