doc: restore link to checkstyle releasenotes

--- a/net.sf.eclipsecs.doc/src/main/resources/partials/releases/8.21.0/release_notes.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/releases/8.21.0/release_notes.html
@@ -2,9 +2,19 @@
     <h3>Changes</h3>
     <ul>
         <li>
-            <a href="https://github.com/checkstyle/eclipse-cs/issues/161">
+            <a href="https://github.com/checkstyle/eclipse-cs/issues/1">
                 #161 Update to Checkstyle 8.21
             </a>
         </li>
     </ul>
+    
+    <p>
+        Please read the
+        <a target="_blank" href="http://checkstyle.sourceforge.net/releasenotes.html">
+            Checkstyle release notes
+        </a>
+        for details on recent and potentially breaking changes in Checkstyle.
+        Checkstyle configuration files potentially
+        need to be adapted to this version.
+    </p>
 </div>
