minor: remove extra a tag

--- a/docs/partials/releases/8.19.0/release_notes.html
+++ b/docs/partials/releases/8.19.0/release_notes.html
@@ -22,21 +22,33 @@
             <a href="https://github.com/checkstyle/eclipse-cs/issues/145">
                 #145 Update to Checkstyle 8.19
             </a>
+        </li>
+        <li>
             <a href="https://github.com/checkstyle/eclipse-cs/issues/153">
-                #153 NPE in rule filter</a>
+                #153 NPE in rule filter
             </a>
+        </li>
+        <li>
             <a href="https://github.com/checkstyle/eclipse-cs/issues/156">
                 #156 Focus name field in configuration editor
             </a>
+        </li>
+        <li>
             <a href="https://github.com/checkstyle/eclipse-cs/issues/157">
                 #157 Select newly created configurations
             </a>
+        </li>
+        <li>
             <a href="https://github.com/checkstyle/eclipse-cs/issues/150">
                 #150 Add documentation for "files older than a day" filter 
             </a>
+        </li>
+        <li>
             <a href="https://github.com/checkstyle/eclipse-cs/issues/167">
                 #167 Rely on the column char index to find correct marker start
             </a>
+        </li>
+        <li>
             <a href="https://github.com/checkstyle/eclipse-cs/issues/110">
                 #110 Hint with rule name for suppression
             </a>
