--- a/net.sf.eclipsecs.doc/src/main/resources/partials/releases/8.19.0/release_notes.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/releases/8.19.0/release_notes.html
@@ -25,7 +25,7 @@
         </li>
         <li>
             <a href="https://github.com/checkstyle/eclipse-cs/issues/153">
-                #153 NPE in rule filter</a>
+                #153 NPE in rule filter
             </a>
         </li>
         <li>
