Fix minimum Eclipse version documentation
* remove wrong mentioning of Indigo as supported version
* don't list all Eclipse releases, to avoid the need for updating files
on every new Eclipse release
* use "Juno or higher version" instead of ">Indigo", since that is
easier to understand for end users

--- a/net.sf.eclipsecs.doc/src/main/resources/partials/index.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/index.html
@@ -8,7 +8,7 @@
                     <p style="margin-bottom: 5px;">
                         <a class="btn btn-primary btn-outline-inverse btn-lg" target="_blank"
                             href="http://marketplace.eclipse.org/marketplace-client-intro?mpc_install=150"
-                            title="Drag and drop this link into a running Eclipse (&gt;Indigo) workspace to install the Eclipse Checkstyle Plugin">
+                            title="Drag and drop this link into a running Eclipse (Juno or higher version) workspace to install the Eclipse Checkstyle Plugin">
                             <i class="fa fa-plug">
                             </i>
                             Install
@@ -31,7 +31,7 @@
                     <small>
                         <sup>1 </sup>
                         Install via Eclipse Marketplace. Drag and drop this link into a running Eclipse
-                        (&gt;Indigo) workspace
+                        (Juno or higher version) workspace
                     </small>
                     <br />
                     <small>
