Issue #279: change update-site references

--- a/net.sf.eclipsecs.doc/src/main/resources/partials/install.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/install.html
@@ -44,34 +44,11 @@
         <div class="panel-body">
             <ol>
                 <li>Within Eclipse go to: <em>Help -> Install New Software...</em></li>
-                <li>Enter the following update site url: <code>https://checkstyle.org/eclipse-cs/update</code></li>
+                <li>Enter the following update site url: <code>https://checkstyle.org/eclipse-cs-update-site</code></li>
                 <li>Select the Eclipse Checkstyle Plugin feature to install</li>
                 <li>Conclude the installation as described above</li>
             </ol>
         </div>
     </div>
-
-    <div class="panel panel-default">
-        <div class="panel-heading">From an update site archive</div>
-        <div class="panel-body">
-            <p>
-                <a class="btn btn-primary btn-outline-inverse btn-lg" target="_blank"
-                    href="https://bintray.com/eclipse-cs/eclipse-cs/update-site-archive/_latestVersion"><i class="fa fa-download"
-                    > </i> Download latest</a>
-                <a class="btn btn-default btn-outline-inverse btn-lg" target="_blank"
-                    href="https://bintray.com/eclipse-cs/eclipse-cs/update-site-archive/"> Download
-                    older release <i class="fa fa-external-link"> </i></a>
-                <a class="btn btn-default btn-outline-inverse btn-lg" target="_blank"
-                    href="http://sourceforge.net/projects/eclipse-cs/files/Eclipse%20Checkstyle%20Plug-in/"> Download
-                    ancient releases <i class="fa fa-external-link"> </i></a>
-            </p>
-            <ol>
-                <li>Download a Eclipse Checkstyle Plugin update site bundle</li>
-                <li>Within Eclipse go to: <em>Help -> Install New Software...</em></li>
-                <li>Press <em>Add...</em>, then <em>Archive...</em>, select the downloaded file</li>
-                <li>Select the Eclipse Checkstyle Plugin feature to install</li>
-                <li>Conclude the installation as described above</li>
-            </ol>
-        </div>
-    </div>
+    
 </div>
