--- a/docs/partials/index.html
+++ b/docs/partials/index.html
@@ -14,13 +14,6 @@
                             Install
                             <sup>1</sup>
                         </a>
-                        <a class="btn btn-primary btn-outline-inverse btn-lg" target="_blank"
-                            href="https://bintray.com/eclipse-cs/eclipse-cs/update-site-archive/_latestVersion" title="Download the latest release as update site archive">
-                            <i class="fa fa-download">
-                            </i>
-                            Download
-                            <sup>2</sup>
-                        </a>
                         <a class="btn btn-default btn-outline-inverse btn-lg" target="_blank"
                             href="https://github.com/checkstyle/eclipse-cs" title="Browse/clone code at Github">
                             <i class="fa fa-code">
@@ -31,12 +24,7 @@
                     <small>
                         <sup>1 </sup>
                         Install via Eclipse Marketplace. Drag and drop this link into a running Eclipse
-                        (Juno or higher version) workspace
-                    </small>
-                    <br />
-                    <small>
-                        <sup>2 </sup>
-                        Latest release 8.41.0, based on Checkstyle 8.41, see
+                        (Juno or higher version) workspace. Latest release 8.41.1, based on Checkstyle 8.41, see
                         <a href="#!/releasenotes">release notes</a>
                     </small>
                 </div>
