--- a/docs/partials/index.html
+++ b/docs/partials/index.html
@@ -199,7 +199,7 @@
                     installed from the following
                     update site:
                 </p>
-                <code>http://sevntu-checkstyle.github.com/sevntu.checkstyle/update-site/</code>
+                <code>http://sevntu-checkstyle.github.io/sevntu.checkstyle/update-site/</code>
             </div>
         </div>
         <div class="row">
