--- a/docs/partials/index.html
+++ b/docs/partials/index.html
@@ -24,7 +24,7 @@
                     <small>
                         <sup>1 </sup>
                         Install via Eclipse Marketplace. Drag and drop this link into a running Eclipse
-                        (2020-09 or higher version) workspace. Latest release 10.2.0, based on Checkstyle 10.2, see
+                        (2020-09 or higher version) workspace. Latest release 10.3.0, based on Checkstyle 10.3, see
                         <a href="#!/releasenotes">release notes</a>
                     </small>
                 </div>
@@ -66,7 +66,7 @@
                 <p class="text-justify">
                     The Eclipse Checkstyle Plugin (aka eclipse-cs) integrates the static source code
                     analyzer
-                    <a href="http://checkstyle.sourceforge.net/">
+                    <a href="https://checkstyle.org/">
                         Checkstyle
                         <i class="fa fa-external-link">
                         </i>
