--- a/docs/partials/index.html
+++ b/docs/partials/index.html
@@ -24,8 +24,8 @@
                     <small>
                         <sup>1 </sup>
                         Install via Eclipse Marketplace. Drag and drop this link into a running Eclipse
-                        (2021-06 or higher version) workspace. Latest release 10.12.6, based on Checkstyle 10.12.0, see
-                        <a href="#!/releasenotes">release notes</a>
+                        (2021-06 or higher version) workspace. Latest release 10.12.6, see
+                        <a href="#!/releasenotes">release notes</a>.
                     </small>
                 </div>
                 <div id="award-badge" class="col-md-2 panel panel-default" style="margin-top: 20px;">
@@ -73,7 +73,7 @@
                     </a>
                     into the Eclipse IDE.
                     <br />
-                    Checkstyle is a Open Source development tool to help you
+                    Checkstyle is an Open Source development tool to help you
                     ensure that your Java code adheres to a set
                     of coding standards. Checkstyle does this by inspecting
                     your Java source code and pointing out items
@@ -172,8 +172,7 @@
                             <br />
                             A short introduction into creating your own Checkstyle configurations can be
                             found
-                            <a href="#!/custom-config">here</a>
-                            .
+                            <a href="#!/custom-config">here</a>.
                         </p>
                     </div>
                 </div>
