--- a/docs/partials/install.html
+++ b/docs/partials/install.html
@@ -17,12 +17,12 @@
                 <li>Drag&amp;Drop the link above to a running Eclipse instance (2021-06 or higher version). This will trigger the
                     Eclipse Marketplace client with the Eclipse Checkstyle Plugin being pre-selected for
                     installation.</li>
-                <li>Confirm the selection of features to install</li>
-                <li>Read/accept the license terms</li>
-                <li>Eclipse will now download the necessary files</li>
+                <li>Confirm the selection of features to install.</li>
+                <li>Read/accept the license terms.</li>
+                <li>Eclipse will now download the necessary files.</li>
                 <li>After all file have been downloaded, Eclipse will ask about installing unsigned content. If you're
                     ok with that accept.</li>
-                <li>After installation you will be promted for a restart of Eclipse, which is recommended</li>
+                <li>After installation you will be prompted for a restart of Eclipse, which is recommended.</li>
 
             </ol>
         </div>
@@ -32,8 +32,8 @@
         <div class="panel-heading">Via Eclipse Marketplace client</div>
         <div class="panel-body">
             <ol>
-                <li>Launch the Marketplace client within Eclipse (<em>Help -> Eclipse Marketplace...</em>)</li>
-                <li>Search for the solution to install, e.g. <em>Checkstyle</em> and click <em>Install</em></li>
+                <li>Launch the Marketplace client within Eclipse (<em>Help -> Eclipse Marketplace...</em>).</li>
+                <li>Search for the solution to install, e.g. <em>Checkstyle</em> and click <em>Install</em>.</li>
                 <li>Conclude the installation as described above.</li>
             </ol>
         </div>
@@ -45,8 +45,8 @@
             <ol>
                 <li>Within Eclipse go to: <em>Help -> Install New Software...</em></li>
                 <li>Enter the following update site url: <code>https://checkstyle.org/eclipse-cs-update-site</code></li>
-                <li>Select the Eclipse Checkstyle Plugin feature to install</li>
-                <li>Conclude the installation as described above</li>
+                <li>Select the Eclipse Checkstyle Plugin feature to install.</li>
+                <li>Conclude the installation as described above.</li>
             </ol>
         </div>
     </div>
