--- a/docs/partials/extensions.html
+++ b/docs/partials/extensions.html
@@ -1,7 +1,7 @@
 <div class="container">
     <!-- <div data-google-ad=""/> -->
 
-    <h1>Extending the Eclipse Checkstyle Plugin</h1>
+    <h1>Extending Eclipse Checkstyle</h1>
     <p>The Checkstyle core and the eclipse-cs plugin can be extended to add one or more of the following artifacts: </p>
     <ul>
         <li>
@@ -18,7 +18,7 @@
         not as complicated as it sounds.</p>
     <p> The easiest way is to check out the sample eclipse-cs extension plugin from the Git repository, this sample
         plugin provides an example for each documented extension hook.</p>
-    <p>The repository location is: <code>https://github.com/checkstyle/eclipse-cs.git</code><br/>The project to check out is:
+    <p>The repository location is: <code>https://github.com/checkstyle/eclipse-cs.git</code>.<br/>The project to check out is:
             <code>net.sf.eclipsecs.sample</code></p>
     <p>After you got the project in your workspace you can just disconnect it from the Git and rename the project and
         the plugins symbolic bundle name in <code>META-INF/MANIFEST.MF</code> to your liking.</p>
