--- a/net.sf.eclipsecs.doc/src/main/resources/partials/builtin-config.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/builtin-config.html
@@ -2,10 +2,10 @@
     <!-- <div data-google-ad=""/> -->
 
     <h1>Provide a custom built-in configuration</h1>
-    <p>By providing a <a href="#!/extensions">extension plugin</a> the eclipse-cs enables you to roll out a immutable
+    <p>By providing an <a href="#!/extensions">extension plugin</a> Eclipse Checkstyle enables you to roll out an immutable
         Checkstyle configuration to your team members.<br/> This is especially powerful if you distribute your plugin
-        via a corporate update site</p>
-    <p>You can provide such a built-in configuration by the use of the <code>net.sf.eclipsecs.core.configurations</code>
+        via a corporate update site.</p>
+    <p>You can provide such a built-in configuration by extending the <code>net.sf.eclipsecs.core.configurations</code>
         extension point.</p>
     <p>Simply put your configuration file into the root of the extension plugin project and add a similar entry (see
         example below) to your <code>plugin.xml</code>. <br/>
