Infra: declare all DTDs with checkstyle.org
Let all DTDs point to the current host instead of the old sourceforge
host.

--- a/docs/partials/custom-checks.html
+++ b/docs/partials/custom-checks.html
@@ -47,12 +47,12 @@
                 <strong> In order to let the plug-in find your metadata you need to declare the package within your
                         <code>checkstyle_packages.xml</code> file (see point 2). </strong>
                 <br/> The metadata file must adhere to this dtd: <a target="_blank"
-                    href="http://eclipse-cs.sourceforge.net/dtds/checkstyle-metadata_1_1.dtd"
-                    >http://eclipse-cs.sourceforge.net/dtds/checkstyle-metadata_1_1.dtd</a> . <br/> So it would be a
+                    href="https://checkstyle.org/eclipse-cs/dtds/checkstyle-metadata_1_1.dtd"
+                    >https://checkstyle.org/eclipse-cs/dtds/checkstyle-metadata_1_1.dtd</a> . <br/> So it would be a
                 good idea to include this document type declaration to your metadata file: </p>
             <pre><code>&lt;!DOCTYPE checkstyle-metadata
     PUBLIC &quot;-//eclipse-cs//DTD Check Metadata 1.1//EN&quot;
-    &quot;http://eclipse-cs.sourceforge.net/dtds/checkstyle-metadata_1_1.dtd&quot;&gt;</code></pre>
+    &quot;https://checkstyle.org/eclipse-cs/dtds/checkstyle-metadata_1_1.dtd&quot;&gt;</code></pre>
             <p>This way you can validate your metadata file against the dtd using your preferred XML editor.</p>
             <p> The dtd file itself contains an abundance of documentation on the tags and their attributes, further
                 further practical reference you may want to peek into the <code>net.sf.eclipsecs.checkstyle</code>
