Infra: Use Maven wrapper
The Maven wrapper allows running Maven without it being installed, and
to specify the version being used. That way all developers and CI
systems can use the same version easily.

Travis supports mvnw:
https://docs.travis-ci.com/user/languages/java/#maven-dependency-management

As a developer, use "./mvnw goals" instead of "mvn goals" in the future,
please.

--- a/docs/partials/index.html
+++ b/docs/partials/index.html
@@ -213,10 +213,8 @@
                     workspace.
                 </p>
                 <p>
-                    To build an update site bundle package you will require Apache Maven (3.2.x should do fine).
-                    <br />
                     Open a command line in project root directory and run
-                    <code>mvn clean package</code>
+                    <code>./mvnw clean package</code>
                     .
                     <br />
                     <br />
