--- a/net.sf.eclipsecs.doc/src/main/resources/partials/index.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/index.html
@@ -213,10 +213,8 @@
                     workspace.
                 </p>
                 <p>
-                    To build an update site bundle package you will require Apache Maven (3.2.x should do fine).
-                    <br />
                     Open a command line in project root directory and run
-                    <code>mvn clean package</code>
+                    <code>./mvnw clean package</code>
                     .
                     <br />
                     <br />
