--- a/net.sf.eclipsecs.doc/src/main/resources/partials/custom-config.html
+++ b/net.sf.eclipsecs.doc/src/main/resources/partials/custom-config.html
@@ -97,51 +97,46 @@
     <h3>Congratulations!</h3>
     <p>Now we&#39;ve covered all the basics of the Eclipse Checkstyle Plug-in. <br/> Now you surely want to dive in and
         create an extensive configuration - trying out all checks that Checkstyle has to offer (which are a lot!).</p>
-    <p>Detailed information on the configuration options for each check can be found on the Checkstyle website:</p>
+    <p>Detailed information on the configuration options for each check can be found on the Checkstyle website: </p>
     <ul>
         <li>
-            <a target="_blank" href="https://checkstyle.org/config_javadoc.html">Javadoc Comments <i
-                    class="fa fa-external-link"> </i></a>
+            <a target="_blank" href="https://checkstyle.org/checks/annotation/index.html">Annotations <i class="fa fa-external-link"> </i></a>
         </li>
         <li>
-            <a target="_blank" href="https://checkstyle.org/config_naming.html">Naming Conventions <i
-                    class="fa fa-external-link"> </i></a>
+            <a target="_blank" href="https://checkstyle.org/checks/blocks/index.html">Blocks <i class="fa fa-external-link"> </i></a>
         </li>
         <li>
-            <a target="_blank" href="https://checkstyle.org/config_imports.html">Imports <i
-                    class="fa fa-external-link"> </i></a>
+            <a target="_blank" href="https://checkstyle.org/checks/design/index.html">Class Design <i class="fa fa-external-link"> </i></a>
         </li>
         <li>
-            <a target="_blank" href="https://checkstyle.org/config_sizes.html">Size Violations <i
-                    class="fa fa-external-link"> </i></a>
+            <a target="_blank" href="https://checkstyle.org/checks/coding/index.html">Coding Problems <i class="fa fa-external-link"> </i></a>
         </li>
         <li>
-            <a target="_blank" href="https://checkstyle.org/config_whitespace.html">Whitespace <i
-                    class="fa fa-external-link"> </i></a>
+            <a target="_blank" href="https://checkstyle.org/checks/header/index.html">Headers <i class="fa fa-external-link"> </i></a>
         </li>
         <li>
-            <a target="_blank" href="https://checkstyle.org/config_modifier.html">Modifiers <i
-                    class="fa fa-external-link"> </i></a>
+            <a target="_blank" href="https://checkstyle.org/checks/imports/index.html">Imports <i class="fa fa-external-link"> </i></a>
         </li>
         <li>
-            <a target="_blank" href="https://checkstyle.org/config_blocks.html">Blocks <i
-                    class="fa fa-external-link"> </i></a>
+            <a target="_blank" href="https://checkstyle.org/checks/javadoc/index.html">Javadoc Comments <i class="fa fa-external-link"> </i></a>
         </li>
         <li>
-            <a target="_blank" href="https://checkstyle.org/config_headers.html">Headers <i
-                    class="fa fa-external-link"> </i></a>
+            <a target="_blank" href="https://checkstyle.org/checks/misc/index.html">Miscellaneous <i class="fa fa-external-link"> </i></a>
         </li>
         <li>
-            <a target="_blank" href="https://checkstyle.org/config_coding.html">Coding Problems <i
-                    class="fa fa-external-link"> </i></a>
+            <a target="_blank" href="https://checkstyle.org/checks/modifier/index.html">Modifiers <i class="fa fa-external-link"> </i></a>
         </li>
         <li>
-            <a href="https://checkstyle.org/config_design.html">Class Design <i class="fa fa-external-link"
-                > </i></a>
+            <a target="_blank" href="https://checkstyle.org/checks/naming/index.html">Naming Conventions <i class="fa fa-external-link"> </i></a>
         </li>
         <li>
-            <a href="https://checkstyle.org/config_misc.html">Miscellaneous <i class="fa fa-external-link"
-                > </i></a>
+            <a target="_blank" href="https://checkstyle.org/checks/regexp/index.html">Regular Expressions <i class="fa fa-external-link"> </i></a>
+        </li>
+        <li>
+            <a target="_blank" href="https://checkstyle.org/checks/sizes/index.html">Size Violations <i class="fa fa-external-link"> </i></a>
+        </li>
+        <li>
+            <a target="_blank" href="https://checkstyle.org/checks/whitespace/index.html">Whitespace <i class="fa fa-external-link"> </i></a>
         </li>
     </ul>
 </div>
